--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "scripts": {
         "build": "npx tsc",
         "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/index.js\"",
+        "prepare": "husky install",
         "start": "npm run build && node build/index.js",
-        "test": "jest",
-        "prepare": "husky install"
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
