--- a/package.json
+++ b/package.json
@@ -4,35 +4,34 @@
     "description": "",
     "main": "build/index.js",
     "scripts": {
-        "build": "npx tsc",
-        "dev": "concurrently \"npx tsc --watch\" \"nodemon -q build/index.js\"",
         "prepare": "husky install",
-        "start": "npm run build && node build/index.js",
+        "start": "tsc && node build/index.js",
+        "dev": "concurrently \"tsc --watch\" \"nodemon -q build/index.js\"",
         "test": "jest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "dotenv": "^16.0.1",
-        "express": "^4.18.1"
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2"
     },
     "devDependencies": {
-        "@tsconfig/node16-strictest": "^1.0.3",
-        "@types/express": "^4.17.13",
-        "@types/jest": "^28.1.8",
-        "@types/node": "^18.7.13",
-        "@typescript-eslint/eslint-plugin": "^5.35.1",
-        "@typescript-eslint/parser": "^5.35.1",
-        "concurrently": "^7.3.0",
-        "eslint": "^8.23.0",
-        "eslint-config-prettier": "^8.5.0",
-        "husky": "^8.0.0",
-        "jest": "^28.0.0",
-        "nodemon": "^2.0.19",
-        "prettier": "2.7.1",
+        "@tsconfig/node18-strictest": "^1.0.0",
+        "@types/express": "^4.17.16",
+        "@types/jest": "^29.4.0",
+        "@types/node": "^18.11.18",
+        "@typescript-eslint/eslint-plugin": "^5.50.0",
+        "@typescript-eslint/parser": "^5.50.0",
+        "concurrently": "^7.6.0",
+        "eslint": "^8.33.0",
+        "eslint-config-prettier": "^8.6.0",
+        "husky": "^8.0.3",
+        "jest": "^29.4.1",
+        "nodemon": "^2.0.20",
+        "prettier": "2.8.3",
         "pretty-quick": "^3.1.3",
-        "ts-jest": "^28.0.8",
-        "typescript": "^4.8.2"
+        "ts-jest": "^29.0.5",
+        "typescript": "^4.9.5"
     }
 }
