--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,14 @@
 {
-    "extends": "@tsconfig/node16-strictest/tsconfig.json",
+    "extends": "@tsconfig/node18-strictest/tsconfig.json",
     "include": [
         "src/**/*.ts",
         "test/**/*.ts",
         ".eslintrc.cjs",
         "jest.config.cjs"
     ],
-    "exclude": ["./node_modules/**/*"],
+    "exclude": [
+        "./node_modules/**/*"
+    ],
     "compilerOptions": {
         "outDir": "./build"
     }
