--- a/package.json
+++ b/package.json
@@ -33,5 +33,34 @@
         "pretty-quick": "^3.1.3",
         "ts-jest": "^29.0.5",
         "typescript": "^4.9.5"
+    },
+    "eslintConfig": {
+        "env": {
+            "node": true
+        },
+        "extends": [
+            "eslint:recommended",
+            "plugin:@typescript-eslint/recommended",
+            "plugin:@typescript-eslint/recommended-requiring-type-checking",
+            "prettier"
+        ],
+        "parser": "@typescript-eslint/parser",
+        "parserOptions": {
+            "tsconfigRootDir": "./",
+            "project": [
+                "./tsconfig.json"
+            ]
+        },
+        "plugins": [
+            "@typescript-eslint"
+        ],
+        "root": true
+    },
+    "jest": {
+        "preset": "ts-jest",
+        "testEnvironment": "node",
+        "testMatch": [
+            "**/__tests__/**/?(*.)+(test).ts"
+        ]
     }
 }
