--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,8 @@
 {
     "extends": "./tsconfig.json",
-    "exclude": ["./node_modules/**/*", "./src/**/*.test.ts"]
+    "exclude": ["./node_modules/**/*", "./src/**/*.test.ts"],
+    "compilerOptions": {
+        "declaration": false,
+        "sourceMap": false
+    }
 }
